Bug 221611 - Going back to overview from Display settings
Summary: Going back to overview from Display settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kgamma (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: VHI crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 244267 244981 266189 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-07 07:08 UTC by Christoph Feck
Modified: 2011-02-13 13:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2010-01-07 07:08:55 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.4.59 (KDE 4.4.59 (KDE 4.5 >= 20100107)) (Compiled from sources)
Qt Version: 4.6.1
Operating System: Linux 2.6.31.8-0.1-default i686
Distribution: "openSUSE 11.2 (i586)"

-- Information about the crash:
I could reproduce twice, but I had to try multiple times (from icon view):
* click "Display", "Size & Orientation" is preselected
* click "Gamma"
* note that now "Size & Orientation" asks for changes (this is a different bug)
* accept/apply these changes, accept again on the dialog that shows
* click "Multiple Monitors"
* back to "Overview" can lead to this crash

The crash can be reproduced some of the time.

 -- Backtrace:
Application: System Settings (systemsettings), signal: Segmentation fault
[KCrash Handler]
#6  0xb750596b in KCModuleInfo::comment (this=0x0) at /local/svn/kde/trunk/KDE/kdelibs/kutils/kcmoduleinfo.cpp:163
#7  0xb74df340 in ModuleView::updatePageIconHeader (this=0x82f87a8, page=0x0) at /local/svn/kde/trunk/KDE/kdebase/workspace/systemsettings/core/ModuleView.cpp:200
#8  0xb74dfbd7 in ModuleView::stateChanged (this=0x82f87a8) at /local/svn/kde/trunk/KDE/kdebase/workspace/systemsettings/core/ModuleView.cpp:336
#9  0xb74e0066 in ModuleView::qt_metacall (this=0x82f87a8, _c=InvokeMetaMethod, _id=10, _a=0xbfd0db28) at /local/build/KDE/kdebase/workspace/systemsettings/core/ModuleView.moc:101
#10 0xb5ffa3fd in QMetaObject::metacall (object=0x82f87a8, cl=3218135848, idx=37, argv=0xbfd0db28) at kernel/qmetaobject.cpp:237
#11 0xb600922a in QMetaObject::activate (sender=0x839cd40, m=0xb754d9fc, local_signal_index=0, argv=0xbfd0db28) at kernel/qobject.cpp:3267
#12 0xb750df5c in KCModuleProxy::changed (this=0x839cd40, _t1=true) at /local/build/KDE/kdelibs/kutils/kcmoduleproxy.moc:107
#13 0xb750d3ab in KCModuleProxyPrivate::_k_moduleChanged (this=0x84afb88, c=true) at /local/svn/kde/trunk/KDE/kdelibs/kutils/kcmoduleproxy.cpp:233
#14 0xb750dea4 in KCModuleProxy::qt_metacall (this=0x839cd40, _c=InvokeMetaMethod, _id=6, _a=0xbfd0dc98) at /local/build/KDE/kdelibs/kutils/kcmoduleproxy.moc:93
#15 0xb5ffa3fd in QMetaObject::metacall (object=0x839cd40, cl=3218135848, idx=33, argv=0xbfd0dc98) at kernel/qmetaobject.cpp:237
#16 0xb600922a in QMetaObject::activate (sender=0x83c26a0, m=0xb74c4408, local_signal_index=0, argv=0xbfd0dc98) at kernel/qobject.cpp:3267
#17 0xb7320438 in KCModule::changed (this=0x83c26a0, _t1=true) at /local/build/KDE/kdelibs/kdeui/kcmodule.moc:106
#18 0xb2bb223d in KGamma::Changed (this=0x83c26a0) at /local/svn/kde/trunk/KDE/kdegraphics/kgamma/kcmkgamma/kgamma.h:57
#19 0xb2babfa0 in KGamma::qt_metacall (this=0x83c26a0, _c=InvokeMetaMethod, _id=0, _a=0xbfd0ddb8) at /local/build/KDE/kdegraphics/kgamma/kcmkgamma/kgamma.moc:76
#20 0xb5ffa3fd in QMetaObject::metacall (object=0x83c26a0, cl=3218135848, idx=36, argv=0xbfd0ddb8) at kernel/qmetaobject.cpp:237
#21 0xb600922a in QMetaObject::activate (sender=0x83b4200, m=0xb2bb8b88, local_signal_index=0, argv=0xbfd0ddb8) at kernel/qobject.cpp:3267
#22 0xb2bab364 in GammaCtrl::gammaChanged (this=0x83b4200, _t1=12) at /local/build/KDE/kdegraphics/kgamma/kcmkgamma/gammactrl.moc:95
#23 0xb2babd16 in GammaCtrl::setGamma (this=0x83b4200, sliderpos=12) at /local/svn/kde/trunk/KDE/kdegraphics/kgamma/kcmkgamma/gammactrl.cpp:106
#24 0xb2babb21 in GammaCtrl::setGamma (this=0x83b4200, gamma=...) at /local/svn/kde/trunk/KDE/kdegraphics/kgamma/kcmkgamma/gammactrl.cpp:76
#25 0xb2baf69a in KGamma::load (this=0x83c26a0) at /local/svn/kde/trunk/KDE/kdegraphics/kgamma/kcmkgamma/kgamma.cpp:318
#26 0xb2bad3d5 in KGamma::~KGamma (this=0x83c26a0, __in_chrg=<value optimized out>) at /local/svn/kde/trunk/KDE/kdegraphics/kgamma/kcmkgamma/kgamma.cpp:122
#27 0xb750d342 in KCModuleProxy::deleteClient (this=0x839cd40) at /local/svn/kde/trunk/KDE/kdelibs/kutils/kcmoduleproxy.cpp:219
#28 0xb750d28b in KCModuleProxy::~KCModuleProxy (this=0x839cd40, __in_chrg=<value optimized out>) at /local/svn/kde/trunk/KDE/kdelibs/kutils/kcmoduleproxy.cpp:210
#29 0xb6004bbc in QObjectPrivate::deleteChildren (this=0x83d1430) at kernel/qobject.cpp:1978
#30 0xb673a000 in QWidget::~QWidget (this=0x819b5e0, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1460
#31 0xb6004bbc in QObjectPrivate::deleteChildren (this=0x8388570) at kernel/qobject.cpp:1978
#32 0xb673aa40 in QWidget::~QWidget (this=0x8369628, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1460
#33 0xb6b1d23f in QFrame::~QFrame (this=0x8369628, __in_chrg=<value optimized out>) at widgets/qframe.cpp:242
#34 0xb6bbb9e4 in QAbstractScrollArea::~QAbstractScrollArea (this=0x8369628, __in_chrg=<value optimized out>) at widgets/qabstractscrollarea.cpp:524
#35 0xb6bbfea5 in QScrollArea::~QScrollArea (this=0x8369628, __in_chrg=<value optimized out>) at widgets/qscrollarea.cpp:176
#36 0xb72a7eda in KPageWidgetItem::Private::~Private (this=0x83b52d8, __in_chrg=<value optimized out>) at /local/svn/kde/trunk/KDE/kdelibs/kdeui/paged/kpagewidgetmodel.cpp:40
#37 0xb72a6134 in KPageWidgetItem::~KPageWidgetItem (this=0x8399940, __in_chrg=<value optimized out>) at /local/svn/kde/trunk/KDE/kdelibs/kdeui/paged/kpagewidgetmodel.cpp:84
#38 0xb72a64d7 in PageItem::~PageItem (this=0x839cb58, __in_chrg=<value optimized out>) at /local/svn/kde/trunk/KDE/kdelibs/kdeui/paged/kpagewidgetmodel.cpp:174
#39 0xb72a749a in KPageWidgetModel::removePage (this=0x82fac70, item=0x8399940) at /local/svn/kde/trunk/KDE/kdelibs/kdeui/paged/kpagewidgetmodel.cpp:481
#40 0xb72a58d0 in KPageWidget::removePage (this=0x82f8910, item=0x8399940) at /local/svn/kde/trunk/KDE/kdelibs/kdeui/paged/kpagewidget.cpp:113
#41 0xb74df686 in ModuleView::closeModules (this=0x82f87a8) at /local/svn/kde/trunk/KDE/kdebase/workspace/systemsettings/core/ModuleView.cpp:251
#42 0xb2cd46be in IconMode::backToOverview (this=0x82f58e8) at /local/svn/kde/trunk/KDE/kdebase/workspace/systemsettings/icons/IconMode.cpp:153
#43 0xb2cd4c89 in IconMode::qt_metacall (this=0x82f58e8, _c=InvokeMetaMethod, _id=3, _a=0xbfd0e338) at /local/build/KDE/kdebase/workspace/systemsettings/icons/IconMode.moc:82
#44 0xb5ffa3fd in QMetaObject::metacall (object=0x82f58e8, cl=3218135848, idx=14, argv=0xbfd0e338) at kernel/qmetaobject.cpp:237
#45 0xb600922a in QMetaObject::activate (sender=0x82f4f20, m=0xb6ff4258, local_signal_index=1, argv=0xbfd0e338) at kernel/qobject.cpp:3267
#46 0xb66cbc8d in QAction::triggered (this=0x82f4f20, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#47 0xb66cdf9c in QAction::activate (this=0x82f4f20, event=Trigger) at kernel/qaction.cpp:1251
#48 0xb6bb31e0 in trigger (this=<value optimized out>) at ../../src/gui/kernel/qaction.h:218
#49 QToolButton::nextCheckState (this=<value optimized out>) at widgets/qtoolbutton.cpp:1147
#50 0xb6acbcf7 in QAbstractButtonPrivate::click (this=0x8337178) at widgets/qabstractbutton.cpp:528
#51 0xb6acbff6 in QAbstractButton::mouseReleaseEvent (this=0x81bdbc8, e=0xbfd0ea70) at widgets/qabstractbutton.cpp:1121
#52 0xb6bb36bd in QToolButton::mouseReleaseEvent (this=0x81bdbc8, e=0xbfd0ea70) at widgets/qtoolbutton.cpp:721
#53 0xb673322b in QWidget::event (this=0x81bdbc8, event=0xbfd0ea70) at kernel/qwidget.cpp:7978
#54 0xb6acac80 in QAbstractButton::event (this=0x81bdbc8, e=0x0) at widgets/qabstractbutton.cpp:1080
#55 0xb6bb621c in QToolButton::event (this=0x81bdbc8, event=0xbfd0ea70) at widgets/qtoolbutton.cpp:1163
#56 0xb66d268c in QApplicationPrivate::notify_helper (this=0x80995c0, receiver=0x81bdbc8, e=0xbfd0ea70) at kernel/qapplication.cpp:4297
#57 0xb66d9e95 in QApplication::notify (this=0xbfd0e7a4, receiver=0x81bdbc8, e=0xbfd0ea70) at kernel/qapplication.cpp:3862
#58 0xb7258d58 in KApplication::notify (this=0xbfd0f2b4, receiver=0x81bdbc8, event=0xbfd0ea70) at /local/svn/kde/trunk/KDE/kdelibs/kdeui/kernel/kapplication.cpp:302
#59 0xb5ff508e in QCoreApplication::notifyInternal (this=0xbfd0f2b4, receiver=0x81bdbc8, event=0xbfd0ea70) at kernel/qcoreapplication.cpp:704
#60 0xb66d8de4 in sendSpontaneousEvent (event=<value optimized out>, receiver=<value optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:218
#61 QApplicationPrivate::sendMouseEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qapplication.cpp:2960
#62 0xb67663ea in QETWidget::translateMouseEvent (this=0x8193f80, event=0xbfd0ef7c) at kernel/qapplication_x11.cpp:4368
#63 0xb6765994 in QApplication::x11ProcessEvent (this=0xbfd0f2b4, event=0xbfd0ef7c) at kernel/qapplication_x11.cpp:3379
#64 0xb6792ce8 in x11EventSourceDispatch (s=0x8091cb0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#65 0xb56e64c2 in g_main_dispatch (context=<value optimized out>) at gmain.c:1960
#66 IA__g_main_context_dispatch (context=<value optimized out>) at gmain.c:2513
#67 0xb56e9d98 in g_main_context_iterate (context=0x8090e98, block=<value optimized out>, dispatch=1, self=0x808e2b8) at gmain.c:2591
#68 0xb56e9ebe in IA__g_main_context_iteration (context=0x8090e98, may_block=1) at gmain.c:2654
#69 0xb6021c61 in QEventDispatcherGlib::processEvents (this=0x80996a8, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#70 0xb679283a in QGuiEventDispatcherGlib::processEvents (this=0x80996a8, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#71 0xb5ff36fd in QEventLoop::processEvents (this=0xbfd0f234, flags=) at kernel/qeventloop.cpp:149
#72 0xb5ff3b49 in QEventLoop::exec (this=0xbfd0f234, flags=...) at kernel/qeventloop.cpp:201
#73 0xb5ff7cc0 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#74 0xb66d2734 in QApplication::exec () at kernel/qapplication.cpp:3576
#75 0x08059c89 in main (argc=5, argv=0xbfd0f3e4) at /local/svn/kde/trunk/KDE/kdebase/workspace/systemsettings/app/main.cpp:49

Reported using DrKonqi
Comment 1 Ben Cooksley 2010-01-07 09:32:58 UTC
SVN commit 1070988 by bcooksley:

Ensure the page is valid before doing stuff with it.
CCBUG: 221611

 M  +5 -0      ModuleView.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070988
Comment 2 Ben Cooksley 2010-01-07 09:35:19 UTC
Backtrace indicates that the Gamma KCM indicates it has changes in its destructor. Therefore this is a bug in it also. 

@Christoph: Does this fix it for you? If it does I will backport.
Comment 3 Christoph Feck 2010-01-07 15:51:47 UTC
Thanks Ben, the crash is fixed. Regarding the kgamma problem, should I file a new bug, or reassign this one (as this is actually the reason for the bug)
Comment 4 Ben Cooksley 2010-01-07 21:58:56 UTC
Reassigning to KGamma, now that the System Settings part is safe.
Comment 5 Ben Cooksley 2010-01-07 22:03:23 UTC
SVN commit 1071323 by bcooksley:

Backport commit 1070988
Ensure the page is valid before doing stuff with it.
CCBUG: 221611

 M  +5 -0      ModuleView.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1071323
Comment 6 Christoph Feck 2010-06-23 22:38:19 UTC
SVN commit 1141930 by cfeck:

Fix crash caused by signal emission in destructor

BUG: 221611


 M  +3 -0      kgamma.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1141930
Comment 7 Christoph Feck 2010-06-23 22:39:23 UTC
SVN commit 1141932 by cfeck:

Fix crash caused by signal emission in destructor (backport r1141930)

CCBUG: 221611
FIXED-IN: 4.4.5


 M  +3 -0      kgamma.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1141932
Comment 8 Christoph Feck 2010-07-12 03:47:52 UTC
*** Bug 244267 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2010-07-18 12:01:25 UTC
*** Bug 244981 has been marked as a duplicate of this bug. ***
Comment 10 Dario Andres 2011-02-13 13:06:53 UTC
*** Bug 266189 has been marked as a duplicate of this bug. ***