Fix crash caused by signal emission in destructor

BUG: 221611

svn path=/trunk/KDE/kdegraphics/kgamma/; revision=1141930